# IrisOld

./: .gitignore  CMakeLists.txt  README.md  groups  project.config
ResourceFiles/AppConfig/: AppConfig.xml
ResourceFiles/DataBases/: test.sqlite
src/: main.cpp
src/app/: App.cpp  App.hpp
src/app/appconfig/: AppConfig.cpp  AppConfig.hpp
src/app/appconfig/ConfigDom/: ConfigDom.cpp  ConfigDom.hpp
src/app/appconfig/configdom/: ConfigDom.cpp  ConfigDom.hpp
src/app/appstart/: AppStart.cpp  AppStart.hpp
src/common/definitions/enums/repository/: Repository.hpp
src/common/exception/baseexception/: BaseException.cpp  BaseException.hpp
src/common/iocfactory/: IocFactory.cpp  IocFactory.hpp
src/common/iocfactory/ioccontainer/: IocContainer.hpp
src/definitions/persistance/crudworker/: ICrudWorker.hpp
src/definitions/persistance/repository/: IRepository.hpp
src/neuralnet/data/person/: Person.hpp
src/persistance/crudworker/: CrudWorker.hpp  CrudWorker_imp.hpp
src/persistance/crudworker/contract/: ICrudWorker.hpp
src/persistance/crudworker/impl/: CrudWorker.hpp  CrudWorker_imp.hpp
src/persistance/data/person/: person-odb.cxx  person-odb.hxx  person.hxx
src/persistance/repository/contract/: IRepository.hpp
src/persistance/repository/dbrepository/: DbRepository.hpp  DbRepository_imp.hpp
src/persistance/repository/dbrepository/persistancemapper/: PersistanceMapper.hpp  PersistanceMapper_imp.hpp
src/utils/helper/enumhelper/: EnumHelper.hpp  EnumHelper_imp.hpp
src/utils/parser/pugixmlparser/: PugiXmlParser.hpp  PugiXmlparser.cpp
test/common/iocfactory/: IocFactoryTest.cpp
test/mocks/helper/: MockingHelper.hpp  MockingHelper_imp.hpp
test/mocks/persistance/crudworker/: ICrudWorker_Mock.hpp
test/mocks/persistance/repository/: IRepository_Mock.hpp
test/persistance/crudworker/: CrudWorkerTest.cpp
test/persistance/repository/dbrepository/persistancemapper/: PersistanceMapperTest.cpp
